--- a/public/css/app.css
+++ b/public/css/app.css
@@ -533,6 +533,9 @@ video {
 .mt-5 {
   margin-top: 1.25rem;
 }
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
 .inline {
   display: inline;
 }
@@ -586,6 +589,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .p-6 {
   padding: 1.5rem;
 }
@@ -602,6 +609,9 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.text-center {
+  text-align: center;
 }
 .text-sm {
   font-size: 0.875rem;
